--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -1,30 +1,15 @@
-<% if session[:user_id] %>
-  <header class="bg-black text-white p-4 flex justify-between items-center fixed top-0 left-0 w-full z-10">
-    <div class="text-xl font-bold flex items-center">
-      <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
-      <h1 class="text-3xl">Physicians and Mentors (Test Build)</h1>
-    </div>
+<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'users', media: 'all', data: { turbolinks: false } %>
 
-    <div class="flex justify-center text-white">
-      <%= button_to "Log Out", logout_path, method: :delete, class: "btn hover:text-gray-300 text-lg bg-transparent text-white-900 font-semibold hover:text-white mt-8 p-4 text-3xl border border-white rounded" %>
-    </div>
-  </header>
-<% else %>
-  <header class="bg-black text-white p-4 flex justify-between items-center fixed top-0 left-0 w-full z-10">
-    <div class="text-xl font-bold flex items-center">
-      <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
-      <h1 class="text-3xl">Physicians and Mentors (Test Build)</h1>
-    </div>
-
-    <nav>
-      <%= link_to "Home", home_path, class: "hover:text-gray-300 text-lg bg-transparent text-white-900 font-semibold hover:text-white mt-8 p-4 text-3xl border border-white-900 rounded" %>
-      <%= link_to "Login", login_path, class: "hover:text-gray-300 text-lg bg-transparent text-white-900 font-semibold hover:text-white mt-8 p-4 text-3xl border border-gray-500 rounded" %>
-    </nav>
-  </header>
-<% end %>
-
-<div class="container mt-32">
+<div class="text-white">
   <h1>Professionals</h1>
+  <p>Find me in app/views/professionals/index.html.erb</p>
+
+  <% if notice.present? %>
+    <div class="flex flex-col items-center justify-center rounded-lg p-10 m-10 w-80/100 mx-auto bg-[var(--accent-color)]">
+      <h1 id="notice"><%= notice %></p>
+    </div>
+  <% end %>
 
   <table class="table-auto w-full bg-white text-black">
     <thead class="bg-gray-200 text-black">
@@ -45,7 +30,7 @@
           <td class="border px-4 py-2"><%= professional.email %></td>
           <td class="border px-4 py-2"><%= professional.phone_number %></td>
           <td class="border px-4 py-2">
-            <%= link_to 'Show', professional, class: "text-blue-500 hover:text-blue-700" %>
+            <%= link_to 'Show', professional_path(professional), class: "text-blue-500 hover:text-blue-700" %>
             <%= link_to 'Edit', edit_professional_path(professional), class: "text-yellow-500 hover:text-yellow-700" %>
             <%= link_to 'Destroy', confirm_destroy_professional_path(professional), class: "red-button p-2 rounded-md" %>
           </td>
