--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -1,60 +1,103 @@
-<% if session[:user_id] %>
-  <header class="bg-black text-white p-4 flex justify-between items-center fixed top-0 left-0 w-full z-10">
-    <div class="text-xl font-bold flex items-center">
-      <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
-      <h1 class="text-3xl">Physicians and Mentors (Test Build)</h1>
+<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'users', media: 'all', data: { turbolinks: false } %>
+
+<div class="text-white">
+
+  <h1>All Professionals</h1>
+  <p>Find me in app/views/professionals/index.html.erb</p>
+
+  <% if notice.present? %>
+    <div class="flex flex-col items-center justify-center rounded-lg p-10 m-10 w-80/100 mx-auto bg-[var(--accent-color)]">
+      <h1 id="notice"><%= notice %></h1>
     </div>
+  <% end %>
 
-    <div class="flex justify-center text-white">
-      <%= button_to "Log Out", logout_path, method: :delete, class: "btn hover:text-gray-300 text-lg bg-transparent text-white-900 font-semibold hover:text-white mt-8 p-4 text-3xl border border-white rounded" %>
+  <div class="flex flex-row justify-between m-4 w-80/100 mx-auto">
+    <div class="flex flex-col">
+      <p class="mb-2">Search for professionals by first name:</p>
+      <div>
+        <form action="/professionals" method="GET">
+          <input type="text" name="search_name" class="p-2 rounded-sm bg-[var(--surface-color)]">
+          <input type="submit" value="Search" class="p-2 rounded-sm bg-[var(--ok-highlight-faded-color)] blue-button">
+          <%= link_to 'Reset', professionals_path, class: "p-2 rounded-sm bg-[var(--warn-highlight-faded-color)] red-button" %>
+        </form>
+      </div>
     </div>
-  </header>
-<% else %>
-  <header class="bg-black text-white p-4 flex justify-between items-center fixed top-0 left-0 w-full z-10">
-    <div class="text-xl font-bold flex items-center">
-      <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
-      <h1 class="text-3xl">Physicians and Mentors (Test Build)</h1>
+    <%= link_to 'New Professional', new_professional_path, class: "flex items-center justify-center blue-button p-2 w-10/100 rounded-md bg-[var(--surface-color)]" %>
+  </div>
+
+  <div class="flex flex-col items-center justify-center">
+    <div class="w-80/100 bg-[var(--surface-color)] rounded-md">
+      <table id="professionals-table" class="w-full">
+        <thead>
+          <tr>
+            <th onclick="sortTable(0)" class="w-5/100"></th>
+            <th onclick="sortTable(1)" class="sortable-header w-20/100">First name</th>
+            <th onclick="sortTable(2)" class="sortable-header w-20/100">Last name</th>
+            <th onclick="sortTable(3)" class="sortable-header">Email</th>
+            <th onclick="sortTable(4)" class="sortable-header">Birthday</th>
+            <th onclick="sortTable(5)" class="sortable-header">Phone</th>
+            <th colspan="3">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @professionals.each do |professional| %>
+            <tr class="professionals-table-rows">
+              <td class="profile-td"><%= image_tag(professional.profile_image_url, alt: "Profile image", class: "w-full h-full object-cover aspect-square rounded-md", onerror: "this.onerror=null; this.src='#{asset_path('profile-placeholder.png')}';") %></td>
+              <td><%= professional.first_name %></td>
+              <td><%= professional.last_name %></td>
+              <td><%= professional.email %></td>
+              <td><%= professional.DOB %></td>
+              <td><%= professional.phone_number %></td>
+              <td><%= link_to 'Show', professional, class: "blue-button p-2 rounded-md" %></td>
+              <td><%= link_to 'Edit', edit_professional_path(professional), class: "blue-button p-2 rounded-md" %></td>
+              <td><%= link_to 'Destroy', confirm_destroy_professional_path(professional), class: "red-button p-2 rounded-md " %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
+    <%= link_to 'New Professional', new_professional_path, class: "blue-button p-4 m-4 rounded-md bg-[var(--surface-color)]" %>
+  </div>
 
-    <nav>
-      <%= link_to "Home", home_path, class: "hover:text-gray-300 text-lg bg-transparent text-white-900 font-semibold hover:text-white mt-8 p-4 text-3xl border border-white-900 rounded" %>
-      <%= link_to "Login", login_path, class: "hover:text-gray-300 text-lg bg-transparent text-white-900 font-semibold hover:text-white mt-8 p-4 text-3xl border border-gray-500 rounded" %>
-    </nav>
-  </header>
-<% end %>
-
-<div class="container mt-32">
-  <h1>Professionals</h1>
-
-  <table class="table-auto w-full bg-white text-black">
-    <thead class="bg-gray-200 text-black">
-      <tr>
-        <th class="px-4 py-2">First Name</th>
-        <th class="px-4 py-2">Last Name</th>
-        <th class="px-4 py-2">Email</th>
-        <th class="px-4 py-2">Phone Number</th>
-        <th class="px-4 py-2">Actions</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @professionals.each do |professional| %>
-        <tr class="bg-white text-black">
-          <td class="border px-4 py-2"><%= professional.first_name %></td>
-          <td class="border px-4 py-2"><%= professional.last_name %></td>
-          <td class="border px-4 py-2">
-            <%= link_to professional.email, "mailto:#{professional.email}?subject=Hello%20#{professional.first_name}&body=Dear%20#{professional.first_name},%20" , class: "text-blue-500 hover:text-blue-700" %>
-          </td>
-          <td class="border px-4 py-2"><%= professional.phone_number %></td>
-          <td class="border px-4 py-2">
-            <%= link_to 'Show', professional, class: "text-blue-500 hover:text-blue-700" %>
-            <%= link_to 'Edit', edit_professional_path(professional), class: "text-yellow-500 hover:text-yellow-700" %>
-            <%= link_to 'Destroy', professional, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-red-500 hover:text-red-700" %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-
-  <%= link_to 'New Professional', new_professional_path, class: "text-green-500 hover:text-green-700" %>
+  <br>  
 </div>
+
+<script>
+function sortTable(n) {
+  var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+  table = document.getElementById("professionals-table");
+  switching = true;
+  dir = "asc";
+  while (switching) {
+    switching = false;
+    rows = table.rows;
+    for (i = 1; i < (rows.length - 1); i++) {
+      shouldSwitch = false;
+      x = rows[i].getElementsByTagName("TD")[n];
+      y = rows[i + 1].getElementsByTagName("TD")[n];
+      if (dir == "asc") {
+        if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+          shouldSwitch = true;
+          break;
+        }
+      } else if (dir == "desc") {
+        if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+          shouldSwitch = true;
+          break;
+        }
+      }
+    }
+    if (shouldSwitch) {
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+      switchcount++;
+    } else {
+      if (switchcount == 0 && dir == "asc") {
+        dir = "desc";
+        switching = true;
+      }
+    }
+  }
+}
+</script>
