--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -2,13 +2,11 @@
 <%= stylesheet_link_tag 'professionals', media: 'all', data: { turbolinks: false } %>
 
 <div class="text-white">
-
-  <h1>All Professionals</h1>
-  <p>Find me in app/views/professionals/index.html.erb</p>
+  <h1>Professionals</h1>
 
   <% if notice.present? %>
     <div class="flex flex-col items-center justify-center rounded-lg p-10 m-10 w-80/100 mx-auto bg-[var(--accent-color)]">
-      <h1 id="notice"><%= notice %></h1>
+      <h1 id="notice"><%= notice %></p>
     </div>
   <% end %>
 
@@ -23,6 +21,7 @@
         </form>
       </div>
     </div>
+
     <%= link_to 'New Professional', new_professional_path, class: "flex items-center justify-center blue-button p-2 w-10/100 rounded-md bg-[var(--surface-color)]" %>
   </div>
 
@@ -32,31 +31,31 @@
         <thead>
           <tr>
             <th onclick="sortTable(0)" class="w-5/100"></th>
-            <th onclick="sortTable(1)" class="sortable-header w-20/100">First name</th>
-            <th onclick="sortTable(2)" class="sortable-header w-20/100">Last name</th>
-            <th onclick="sortTable(3)" class="sortable-header">Email</th>
-            <th onclick="sortTable(4)" class="sortable-header">Birthday</th>
-            <th onclick="sortTable(5)" class="sortable-header">Phone</th>
+            <th onclick="sortTable(0)" class="sortable-header w-20/100">First name</th>
+            <th onclick="sortTable(1)" class="sortable-header w-20/100">Last name</th>
+            <th onclick="sortTable(2)" class="sortable-header">Email</th>
+            <th onclick="sortTable(3)" class="sortable-header">Phone</th>
             <th colspan="3">Actions</th>
           </tr>
         </thead>
+
         <tbody>
           <% @professionals.each do |professional| %>
             <tr class="professionals-table-rows">
-              <td class="profile-td"><%= image_tag(professional.profile_image_url, alt: "Profile image", class: "w-full h-full object-cover aspect-square rounded-md", onerror: "this.onerror=null; this.src='#{asset_path('profile-placeholder.png')}';") %></td>
+              <td class="profile-td"><%= image_tag(professional.profile_image_url, alt: "Profile image", class: "w-full h-full object-cover aspect-square rounded-md",  onerror: "this.onerror=null; this.src='#{asset_path('profile-placeholder.png')}';") %></td>
               <td><%= professional.first_name %></td>
               <td><%= professional.last_name %></td>
-              <td><%= mail_to professional.email, professional.email if professional.email.present? %></td>
-              <td><%= professional.DOB %></td>
+              <td><a href="mailto:<%= professional.email %>" class="text-blue-500 hover:text-blue-700"><%= professional.email %></a></td>
               <td><%= professional.phone_number %></td>
               <td><%= link_to 'Show', professional, class: "blue-button p-2 rounded-md" %></td>
               <td><%= link_to 'Edit', edit_professional_path(professional), class: "blue-button p-2 rounded-md" %></td>
-              <td><%= link_to 'Destroy', confirm_destroy_professional_path(professional), class: "red-button p-2 rounded-md " %></td>
+              <td><%= link_to 'Destroy', professional, method: :delete, data: { confirm: 'Are you sure?' }, class: "red-button p-2 rounded-md" %></td>
             </tr>
           <% end %>
         </tbody>
       </table>
     </div>
+    
     <%= link_to 'New Professional', new_professional_path, class: "blue-button p-4 m-4 rounded-md bg-[var(--surface-color)]" %>
   </div>
 
@@ -91,7 +90,7 @@ function sortTable(n) {
     if (shouldSwitch) {
       rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
       switching = true;
-      switchcount++;
+      switchcount ++;
     } else {
       if (switchcount == 0 && dir == "asc") {
         dir = "desc";
