instructions for multiple specialties

--- a/app/views/professionals/_form.html.erb
+++ b/app/views/professionals/_form.html.erb
@@ -96,14 +96,12 @@
 
         <tr class="field">
           <td>
-            <%= form.label :specialty_ids, "Select Specialty" %>
+            <%= form.label :specialty_ids, "Select Specialty" %> (Hold Ctrl + click for multiple).
           </td>
           <td>
             <%= form.collection_select :specialty_ids, Specialty.all, :id, :name, {multiple: true, size: 5, style: "background-color: #f0f0f0; color: #000;" } %>
           </td>
         </tr>
-        
-
       </table>
 
       <div class="flex flex-col items-center justify-center">
