--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -102,6 +102,15 @@
           </td>
         </tr>
 
+        <tr class="field">
+          <td>
+            <%= form.label :isAdmin, "Admin User" %>
+          </td>
+          <td>
+            <%= form.check_box :isAdmin %>
+          </td>
+        </tr>
+
       </table>
 
   </div>
