--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -7,6 +7,12 @@
   <li><%= link_to "View Database", admin_database_path %></li>
 </ul>
 
+<% flash.each do |key, message| %>
+  <div class="alert alert-<%= key %>">
+    <%= message %>
+  </div>
+<% end %>
+
 <h3>Invite a New Admin</h3>
 <%= form_with url: admin_invite_admin_path, method: :post do |form| %>
   <%= form.label :email, "User Email:" %>
@@ -14,8 +20,27 @@
   <%= form.submit "Make Admin" %>
 <% end %>
 
-<% flash.each do |key, message| %>
-  <div class="alert alert-<%= key %>">
-    <%= message %>
-  </div>
+<hr>
+
+<h3>Generate an Invite Code for a Professional</h3>
+<%= form_with url: admin_create_invite_code_path, method: :post do |form| %>
+  <%= form.label :email, "Professional's Email:" %>
+  <%= form.text_field :email %>
+  <%= form.submit "Generate Invite Code" %>
 <% end %>
+
+<h3>Generated Invite Codes</h3>
+<table>
+  <tr>
+    <th>Code</th>
+    <th>Email</th>
+    <th>Used?</th>
+  </tr>
+  <% @invite_codes.each do |invite_code| %>
+    <tr>
+      <td><%= invite_code.code %></td>
+      <td><%= invite_code.user_email %></td>
+      <td><%= invite_code.used ? "Yes" : "No" %></td>
+    </tr>
+  <% end %>
+</table>
