--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "User Profile" %>
 
-<div class="flex justify-center items-center min-h-screen bg-gray-100">
-  <div class="profile-card shadow-lg rounded-xl p-6 w-full md:w-2/3 lg:w-1/2 relative">
+<div class="flex justify-center items-center min-h-screen bg-transparent">
+  <div class="profile-card shadow-lg rounded-xl p-6 w-full md:w-2/3 lg:w-1/2 border border-gray-300 relative">
     <% if notice.present? %>
       <p class="py-2 px-3 bg-green-100 text-green-700 font-medium rounded-md mb-4 text-center" id="notice"><%= notice %></p>
     <% end %>
