--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,6 +59,14 @@
     <p class="text-2xl md:text-4xl text-white font-light">
       A community of students connecting with professionals
     </p>
+    <div class="flex justify-center text-white mt-[32px]">
+      <nav>
+        <%= link_to "Login", login_path, class: "hover:text-gray-300 text-lg bg-transparent text-white font-semibold hover:text-white mx-8 p-4 text-3xl border border-white rounded" %>
+      </nav>
+      <nav>
+        <%= link_to "Sign Up", signup_path, class: "hover:text-gray-300 text-lg bg-transparent  text-white font-semibold hover:text-white mx-8 p-4 text-3xl border border-white rounded" %>
+      </nav>
+    </div>
   </div>
 
 
