--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,10 +15,12 @@
       </div>
       
       <!-- User Info -->
-      <div class="text-left md:text-left profile-card-header">
-        <h1 class="font-semibold text-3xl text-gray-800"><%= @user.first_name %> <%= @user.last_name %></h1>
-        <p class="text-gray-500 text-md mt-1"><%= @user.email %></p>
-        <p class="text-gray-700 font-medium mt-2">📞 <%= @user.phone_number %></p>
+      <div class="profile-card-header">
+        <div class="text-left md:text-left">
+          <h1 class="font-semibold text-3xl text-gray-800"><%= @user.first_name %> <%= @user.last_name %></h1>
+          <p class="text-gray-500 text-md mt-1"><%= @user.email %></p>
+          <p class="text-gray-700 font-medium mt-2">📞 <%= @user.phone_number %>📞</p>
+        </div>
       </div>
     </div>
     
