Added highlighting to DOB attributes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@
       </div>
     </div>
     
-    <div class="flex justify-center mt-6 text-gray-700 border-t pt-4 space-x-2">
+    <div class="profile-card-header flex justify-center mt-6 text-gray-700 border-t pt-4 space-x-2">
       <p class="mb-1 profile-td"><strong class="text-gray-800">DOB:</strong> <%= @user.DOB %></p>
       <p class="mb-1 profile-td"><strong class="text-gray-800">Professional:</strong> <%= @user.isProfessional ? 'Yes' : 'No' %></p>
     </div>
