--- a/app/views/professionals/edit.html.erb
+++ b/app/views/professionals/edit.html.erb
@@ -1,14 +1,12 @@
-<% content_for :title, "Editing professional" %>
-
 <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= stylesheet_link_tag 'users', media: 'all', data: { turbolinks: false } %>
 
 <div class="flex flex-col items-center justify-center">
-  <h1 class="text-2xl m-auto font-bold p-4">Editing an Existing Professional</h1>
+  <h1 class="text-2xl m-auto font-bold p-4">Editing an Existing User</h1>
 </div>
 
 <%= render 'form', professional: @professional %>
 
 <div class="flex flex-col items-center justify-center">
-  <%= link_to 'Cancel',  professionals_path, class: "blue-button p-4 mb-4 rounded-md bg-[var(--surface-color)]" %>
+  <%= link_to 'Cancel', professionals_path, class: "blue-button p-4 mb-4 rounded-md bg-[var(--surface-color)]" %>
 </div>
