fixed/consolidated login logic, added tests

--- a/app/views/users/newAuth.html.erb
+++ b/app/views/users/newAuth.html.erb
@@ -1,45 +1,13 @@
 <!-- app/views/users/newAuth.html.erb -->
-<%= form_for @user do |form| %>
+<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'users', media: 'all', data: { turbolinks: false } %>
 
-    <div class="field">
-        <%= form.label :email %>
-        <%= form.text_field :email, value: @user.email, readonly: true %>  <!-- Email is pre-filled and read-only -->
-    </div>
+<div class="flex flex-col items-center justify-center">
+  <h1 class="text-2xl m-auto font-bold p-4">Complete Your Profile</h1>
+</div>
 
-    <div class="field">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
-    </div>
+<%= render 'form', user: @user, readonly_fields: true, is_new_auth: true %>
 
-    <div class="field">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
-    </div>
-
-    <div class="field">
-        <%= form.label :DOB %>
-        <%= form.date_select :DOB %>
-    </div>
-
-    <div class="field">
-        <%= form.label :phone_number %>
-        <%= form.text_field :phone_number %>
-    </div>
-
-    <div class="field">
-        <%= form.label :password %>
-        <%= form.password_field :password %>
-    </div>
-
-    <div class="field">
-        <%= form.label :password_confirmation %>
-        <%= form.password_field :password_confirmation %>
-    </div>
-
-    <div class="field">
-        <%= form.label :isProfessional %>
-        <%= form.check_box :isProfessional, checked: @user.isProfessional, disabled: true %> <!-- Set to false by default, disabled -->
-    </div>
-
-    <%= form.submit "Complete Profile" %>
-<% end %>
+<div class="flex flex-col items-center justify-center">
+  <%= link_to 'Cancel', root_path, class: "blue-button p-4 mb-4 rounded-md bg-[var(--surface-color)]" %>
+</div>
