--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,8 @@
 <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= stylesheet_link_tag 'users', media: 'all', data: { turbolinks: false } %>
 
+<% readonly_fields ||= false %> <!-- Default value for readonly_fields -->
+
 <% if user.errors.any? %>
   <div id="error_explanation" class="flex flex-col items-center justify-center rounded-lg p-10 m-10 w-80/100 mx-auto bg-[var(--accent-color)]">
     <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -24,7 +26,7 @@
             <%= form.label :last_name, "Last Name" %>
           </td>
           <td>
-            <%= form.text_field :last_name, readonly: readonly_fields %>
+            <%= form.text_field :last_name%>
           </td>
         </tr>
 
@@ -33,7 +35,7 @@
             <%= form.label :first_name, "First Name" %>
           </td>
           <td>
-            <%= form.text_field :first_name, readonly: readonly_fields %>
+            <%= form.text_field :first_name%>
           </td>
         </tr>
 
@@ -97,7 +99,7 @@
             <%= form.label :isProfessional, "Professional User" %>
           </td>
           <td>
-            <%= form.check_box :isProfessional, disabled: is_new_auth %>
+            <%= form.check_box :isProfessional, readonly: is_new_auth, value: false %>
           </td>
         </tr>
 
