--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
   <h1 class="text-2xl m-auto font-bold p-4">Editing an Existing User</h1>
 </div>
 
-<%= render 'form', user: @user %>
+<%= render 'form', user: @user, readonly_fields: false, is_new_auth: false %>
 
 <div class="flex flex-col items-center justify-center">
   <%= link_to 'Cancel', users_path, class: "blue-button p-4 mb-4 rounded-md bg-[var(--surface-color)]" %>
