--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,3 +37,20 @@
   height: 60px;
   background-color: var(--background-color);
 }
+
+.blue-button:hover {
+  background-color: var(--ok-highlight-color);
+}
+
+.blue-button:not(:hover) {
+  transition: background-color 1s;
+}
+
+/* Destroy button */
+.red-button:hover {
+  background-color: var(--warn-highlight-color);
+}
+
+.red-button:not(:hover) {
+  transition: background-color 1s;
+}
