--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,11 @@
-<h1>All Posts</h1>
+<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'posts', media: 'all', data: { turbolinks: false } %>
 
-<%= link_to "Create New Post", new_post_path %>
+<div class="flex flex-col items-center justify-center">
+  <h1 class="text-2xl m-auto font-bold p-4">All Posts</h1>
+</div>
+
+<%= link_to "Create New Post", new_post_path, class: "bg-[var(--surface-color)] blue-button p-4 rounded-md" %>
 
 <% if @specialties.any? %>
   <%= form_with url: posts_path, method: :get, local: true do %>
@@ -16,25 +21,29 @@
 
 <% if @posts.any? %>
   <ul>
-    <% @posts.each do |post| %>
-      <li>
-        <h2><%= link_to post.title, post_path(post) %></h2>
-        <p><%= post.content.truncate(100) %></p> <!-- Show preview of content -->
-        <p><strong>Posted by:</strong> <%= post.sending_user.full_name %></p>
-        <p><small>Posted on: <%= post.created_at.strftime("%B %d, %Y %I:%M %p") %></small></p>
+    <div class="flex flex-col items-center justify-center">
+      <% @posts.each do |post| %>
+        <div class="bg-[var(--surface-color)] p-8 m-2 rounded-md w-80/100">
+          <li>
+            <h2><%= link_to post.title, post_path(post) %></h2>
+            <p><%= post.content.truncate(100) %></p> <!-- Show preview of content -->
+            <p><strong>Posted by:</strong> <%= post.sending_user.full_name %></p>
+            <p><small>Posted on: <%= post.created_at.strftime("%B %d, %Y %I:%M %p") %></small></p>
 
-        <% if post.specialties.any? %> 
-          <h3>Specialties:</h3>
-          <ul>
-            <% post.specialties.each do |specialty| %>
-              <li><%= specialty.name %></li>
+            <% if post.specialties.any? %> 
+              <h3>Specialties:</h3>
+              <ul>
+                <% post.specialties.each do |specialty| %>
+                  <li><%= specialty.name %></li>
+                <% end %>
+              </ul>
+            <% else %>
+              <p>No specialties assigned.</p>
             <% end %>
-          </ul>
-        <% else %>
-          <p>No specialties assigned.</p>
-        <% end %>
-      </li>
-    <% end %>
+          </li>
+        </div>
+      <% end %>
+    </div>
   </ul>
 <% else %>
   <p>No posts available. Be the first to <%= link_to "create a new post", new_post_path %>!</p>
