Stylize new post page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@
   --primary-color: #714098;
   --secondary-color: #e0e549;  /* complement primary color */
   --accent-color: #d878cb;
+  --accent-color-weak: #a37b9e;
   --surface-color: #544a57;
   --text-color: #ffffff;
   --background-color: #201c21;
@@ -46,11 +47,18 @@
   transition: background-color 1s;
 }
 
-/* Destroy button */
 .red-button:hover {
   background-color: var(--warn-highlight-color);
 }
 
 .red-button:not(:hover) {
+  transition: background-color 1s;
+}
+
+.accent-button:hover {
+  background-color: var(--accent-color);
+}
+
+.accent-button:not(:hover) {
   transition: background-color 1s;
 }
