--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -115,8 +115,8 @@
       </table>
 
       <div class="flex flex-col items-center justify-center">
-        <div class="actions blue-button p-4 m-4 rounded-md bg-[var(--surface-color)]">
-          <%= form.submit class: "submit-button" %>
+        <div class="actions blue-button p-4 m-4 rounded-md bg-[var(--ok-highlight-faded-color)]">
+          <%= form.submit %>
         </div>
       </div>
 
