--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,6 +7,6 @@
 
 <%= render 'form', user: @user, readonly_fields: false, is_new_auth: false %>
 
-<div class="flex flex-col items-center justify-center">
+<div class="flex flex-col items-center justify-center p-4">
   <%= link_to 'Cancel', users_path, class: "blue-button p-4 mb-4 rounded-md bg-[var(--surface-color)]" %>
 </div>
