--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -61,6 +61,6 @@
   </div>
 </div>
 
-<div class="flex flex-col items-center justify-center p-4">
+<div class="flex flex-col items-center justify-center mb-4 p-8">
   <%= link_to 'Cancel', posts_path, class: "blue-button p-4 mb-4 rounded-md bg-[var(--surface-color)]" %>
 </div>
