Remove h-full on users profile and professionals table's profile pictures

--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -46,7 +46,7 @@
                 <%= image_tag(
                   professional.profile_image_url.presence || asset_path('profile-placeholder.png'),
                   alt: "Profile image",
-                  class: "w-full h-full object-cover aspect-square rounded-md"
+                  class: "w-full object-cover aspect-square rounded-md"
                 ) %>
               </td>
               <td><%= professional.first_name %></td>
